<resources>
    <string name="app_name">magallEAN</string>
    <string name="usuarios">LISTA DE USUARIOS</string>
    <string name="smi_logo">magallEAN</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="inventarios">Inventarios</string>
    <string name="bienvenido">Bienvenido </string>
    <string name="conteo_de_articulo">Conteo de Articulo</string>
    <string name="etiquetas">Generacion de Etiquetas</string>
    <string name="checklist">Checklist</string>
    <string name="productos">LISTA DE PRODUCTOS</string>
    <string name="consulta">Consulta Individual</string>
    <string name="vencimiento">Lista de Vencidos</string>
    <string name="detalle_de_articulo">Detalle de Articulo</string>
    <string name="reporte_de_articulos_vencidos">Reporte de Articulos Vencidos</string>
    <string name="guardar_producto">Guardar Producto</string>
    <string name="conteo_articulo">Conteo de Articulo</string>
    <string name="generacion_etiqueta">Generacion de Etiqueta</string>
    <string name="guardar_etiqueta">Guardar Etiqueta</string>
    <string name="seguimiento_productos">Seguimiento de Productos</string>
    <string name="editar_borrar">Editar / Borrar</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="busqueda_manual">Busqueda Manual</string>
    <string name="busqueda_manual_2">BUSQUEDA MANUAL</string>
    <string name="modulos_de_consulta">Modulos de Consulta</string>
    <string name="conteo">Conteo</string>
    <string name="etiquetas2">Etiquetas</string>
    <string name="seguimiento">Seguimiento</string>
    <string name="pedido">Pedido</string>
    <string name="vencimiento2">Vencimiento</string>
    <string name="buscar">Buscar</string>
    <string name="ingrese_su_codigo_aqui">Codigo</string>
    <string name="consulta2">Consulta</string>
    <string name="server">Server</string>
    <string name="byCode">Por Codigo</string>
    <string name="byDescription">Por Descripcion</string>
    <string name="lista_de_productos">Lista de Productos</string>
    <string name="main">Main</string>
    <string name="sucursal">Sucursal:</string>
    <string name="toma_de_inventario">Toma de Inventario</string>
    <string name="generacion_de_etiquetas">Generacion de Etiquetas</string>
    <string name="consulta_individual">Consulta Individual</string>
    <string name="configuracion">Configuracion</string>
    <string name="id_del_producto">Id del Producto:</string>
    <string name="detalle">Detalle:</string>
    <string name="stock">Stock:</string>
    <string name="lista_de_inventario_ciclico">Lista de Inventario Ciclico</string>
    <string name="inventario_ciclico">Inventario Ciclico</string>
    <string name="inventario_al_azar">Inventario al Azar</string>
</resources>