<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BusquedaManualActivity">

    <TextView
        android:id="@+id/tvManualSearchTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/busqueda_manual_2"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="#FF949A9A"
        android:textSize="@dimen/fontLarge"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rlSearchModules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_border"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvManualSearchTitle">

        <TextView
            android:id="@+id/tvModuleTitle2"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="@string/modulos_de_consulta"
            android:textAlignment="center"
            android:textSize="@dimen/fontLarge"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llQueryMode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_horizontal"
            android:background="@drawable/title_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvModuleTitle2">

            <CheckBox
                android:id="@+id/cbQueryMode1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_checkbox"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:layout_marginEnd="16dp"
                android:text="@string/byCode"/>
            <CheckBox
                android:id="@+id/cbQueryMode2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_checkbox"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:layout_marginStart="16dp"
                android:text="@string/byDescription"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llChecks1"
            android:layout_width="305dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llQueryMode">

            <CheckBox
                android:id="@+id/cbConteo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/conteo"/>
            <CheckBox
                android:id="@+id/cbEtiquetas1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/etiquetas2"/>
            <CheckBox
                android:id="@+id/cbSeguimiento1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/seguimiento"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llChecks2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llChecks1">

            <CheckBox
                android:id="@+id/cbConsulta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/consulta2"/>
            <CheckBox
                android:id="@+id/cbPedido1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/pedido" />
            <CheckBox
                android:id="@+id/cbVencimiento1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/vencimiento2" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etSearchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/ingrese_su_codigo_aqui"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/black"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/llChecks2">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/buscar"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSearchText"
            android:layout_marginBottom="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>