<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvListCountProductId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/id_del_producto"
            android:textSize="@dimen/fontMini" />
        <TextView
            android:id="@+id/tvListCountProductDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/detalle"
            android:textSize="@dimen/fontMini" />
        <TextView
            android:id="@+id/tvListCountStockInventario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/stock"
            android:textSize="@dimen/fontMini" />
    </LinearLayout>
</androidx.cardview.widget.CardView>