<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InventariosActivity">

    <TextView
        android:id="@+id/tvBienvenida2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main"
        android:textStyle="bold"
        android:textSize="@dimen/fontLarge"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSucursal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sucursal"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBienvenida2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvInventarioC"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/upperMargin"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSucursal2">

        <ImageView
            android:id="@+id/ivInventarioC"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/cycle_inventory"
            android:contentDescription="@string/toma_de_inventario" />

        <TextView
            android:id="@+id/tvInventarioC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="24dp"
            android:text="@string/inventario_ciclico"
            android:textColor="#78909C"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvInventarioA"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/upperMargin"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvInventarioC">

        <ImageView
            android:id="@+id/ivInventarioA"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/random_inventory"
            android:contentDescription="@string/toma_de_inventario" />

        <TextView
            android:id="@+id/tvInventarioA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="24dp"
            android:text="@string/inventario_al_azar"
            android:textColor="#78909C"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>