<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tvBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Main"
        android:textStyle="bold"
        android:textSize="@dimen/fontLarge"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSucursal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sucursal: "
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBienvenida" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvInventario"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/upperMargin"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSucursal">

        <ImageView
            android:id="@+id/ivInventario"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_inventario" />

        <TextView
            android:id="@+id/tvInventario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/inventario"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#949A9A"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEtiquetas"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/upperMargin"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvInventario">

        <ImageView
            android:id="@+id/ivEtiquetas"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_etiquetas" />

        <TextView
            android:id="@+id/tvEtiquetas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/etiquetas"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#949A9A"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvChecklist"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/upperMargin"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvEtiquetas">

        <ImageView
            android:id="@+id/ivChecklist"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_checklist" />

        <TextView
            android:id="@+id/tvChecklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/checklist"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#949A9A"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSeguimiento"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/upperMargin"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvChecklist">

        <ImageView
            android:id="@+id/ivSeguimiento"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_seguimiento" />

        <TextView
            android:id="@+id/tvSeguimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/seguimiento"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#949A9A"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvConsulta"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/upperMargin"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvSeguimiento">

        <ImageView
            android:id="@+id/ivConsulta"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_consulta" />

        <TextView
            android:id="@+id/tvConsulta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/consulta"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#949A9A"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPedido"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/upperMargin"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvConsulta">

        <ImageView
            android:id="@+id/ivPedido"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_pedido" />

        <TextView
            android:id="@+id/tvPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/pedido"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#949A9A"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvVencimiento"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/upperMargin"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPedido">

        <ImageView
            android:id="@+id/ivVencimiento"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_vencimiento" />

        <TextView
            android:id="@+id/tvVencimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/vencimiento"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#949A9A"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvManualSearch"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/upperMargin"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvVencimiento">

        <ImageView
            android:id="@+id/ivManualSearch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_manual" />

        <TextView
            android:id="@+id/tvManualSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/busqueda_manual"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#949A9A"/>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>